# reinvent4-meta-controller

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml  mode_hit_discovery.yaml  mode_lead_opt.yaml
data/: toy_purchasable_stub.csv  toy_training_set.csv
docs/: CONTRIBUTING_TO_REINVENT4.md  architecture.txt  arms.md  how-it-works.md  medchem_handoff.md  operational_modes.md  purchasable_constraints.md  qsar_model_training.md  qsar_scoring.md
models/: README.md
priors/: README.md
r4mc/: __init__.py  arms.py  cli.py  config.py  controller.py  episode.py  metrics.py  reporting.py  seeds.py  state.py  utils.py
r4mc/components/: qsar_component.py
r4mc/report_engine/: __init__.py  cli.py
r4mc/report_engine/io/: __init__.py  discover.py  model.py  parsers.py
r4mc/report_engine/metrics/: diversity.py  ood_uncertainty.py  reward.py  stability.py
r4mc/report_engine/molport/: __init__.py  index.py  ingest.py  nearest.py
r4mc/report_engine/report/: build.py  medchem_handoff.py
r4mc/report_engine/utils/: hashing.py  logging.py  smiles.py
r4mc/templates/: libinvent.toml.j2  linkinvent.toml.j2  mol2mol.toml.j2  mol2mol_qsar.toml.j2  reinvent.toml.j2  reinvent_qsar.toml.j2
scripts/: README.md  qsar_scorer.py
tests/: __init__.py  generate_demo_data.py  test_arms.py  test_metrics.py  test_reporting.py  test_seeds.py
tests/fixtures/demo_run/mol2mol_exploit/episode_001/: scaffold_memory.csv
tests/fixtures/demo_run/mol2mol_exploit/episode_002/: scaffold_memory.csv
tests/fixtures/demo_run/mol2mol_exploit/episode_003/: scaffold_memory.csv
